-Added dropdown to projects 