@@ -1,2 +1,2 @@
-changes.txt
+
 /proj_images
