@@ -75,15 +75,28 @@ div{
   <div class="section-1">
       <h1>Hardware Projects</h1>
 
-      <hr class ="solid">
+      <hr>
   </div>
 
-  <div class="section-2">
+  <div class="project">
+
+        <div class = "slideshow">
+
+        <img src="/proj_Images/6502.jpg" class ="proj_img fade">
+        <img src="/proj_Images/ALU.jpg" class="proj_img fade">
+        <img src="/proj_Images/pcb.jpg" class="proj_img fade">
 
 
-        <img src="/proj_Images/20230130_134259.jpg" class ="proj_img">
+        <a class="prev" onclick="plusSlides(-1)">►</a>
+        <a class="next" onclick="plusSlides(1)">◄</a>
 
-        <div>
+
+        <script src = "hardware.js">
+        </script>
+
+        </div>
+
+        <div class="proj_desc">
 
             <h1>6502 Based Computer</h1>
             <hr class="solid">
@@ -104,6 +117,18 @@ div{
                 </li>
               </ul>
             </div>
+
+              <h2>External Resources</h2>
+
+              <div class="refs">
+              <a href="https://youtube.com/playlist?list=PLowKtXNTBypFbtuVMUVXNR0z1mu7dp7eH&si=-x86MyVejjAb9HX_">Ben Eater's Video Series</a>
+              <a>PCB design (Gerber files)</a>
+              <a>Another Link</a>
+              <a>TEST OF ANOTHER LINK</a>
+              <a>another link to test</a>
+              
+              </div>
+
 
 
 
